# dummy

./: .gitignore  README.md  calls.restclient  dummy.cabal  stack.yaml
app/: Main.hs
src/: Api.hs  Lib.hs
