name:                dummy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/huseyinyilmaz/dummy#readme
license:             BSD3
license-file:        LICENSE
author:              Huseyin Yilmaz
maintainer:          yilmazhuseyin@gmail.com
copyright:           mit
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , transformers
                     , bytestring
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , DataKinds
                     , TypeOperators
                     , TemplateHaskell

executable dummy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , dummy
                     , bytestring
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , DataKinds
                     , TypeOperators
                     , TemplateHaskell
test-suite dummy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dummy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/huseyinyilmaz/dummy
